--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,29 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="true"> 
+  <ion-toolbar> <ion-buttons slot="start"> 
+    <ion-menu-button></ion-menu-button> </ion-buttons> 
+  <ion-title>Mi App</ion-title> 
+</ion-toolbar> 
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true"> 
+  <ion-grid> 
+    <ion-row class="ion-align-items-center" style="justify-content: center;"> 
+      <ion-col size="6"> 
+        <ion-avatar class="ion-margin" style="width: 150px; height: 150px; margin-top: 50px;"> 
+          <img src="https://unavatar.io/kikobeats"> 
+        </ion-avatar> 
+      </ion-col> 
+    </ion-row>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-row class="ion-align-items-center ion-justify-content-center"> 
+      <ion-col size="12"> 
+        <ion-text class="ion-text-center"> 
+          <h2>Hola, soy Osweld</h2> 
+          <p>Esta es mi app personal donde puedes conocer más sobre mí, mi información y mis contactos.</p> 
+        </ion-text> 
+      </ion-col> 
+    </ion-row>
+
+    
+  </ion-grid> 
 </ion-content>
