--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,32 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Información de la App</ion-title>
+  <ion-toolbar color="light">
+    <ion-title>Descubre la App</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  
-
   <ion-card>
     <ion-card-header>
-      <ion-card-title class="ion-text-center">Mi primera App</ion-card-title>
+      <ion-card-title class="ion-text-center">Bienvenido a "Mi primera App"</ion-card-title>
     </ion-card-header>
-  </ion-card>
-
-  <ion-card>
     <ion-card-content>
-      <p>Esta aplicación fue desarrollada utilizando las siguientes tecnologías:</p>
-      <ul>
-        <li><b>Ionic</b>: Un marco de trabajo de código abierto para el desarrollo de aplicaciones móviles.</li>
-        <li><b>Angular</b>: Un marco de trabajo de JavaScript para la construcción de aplicaciones web y móviles.</li>
-      </ul>
-      
+      <p class="ion-text-center">Una aplicación diseñada con pasión y dedicación para brindarte la mejor experiencia.</p>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">Tecnologías utilizadas</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>Esta aplicación fue construida utilizando tecnologías de vanguardia:</p>
+      <ul>
+        <li><b>Ionic</b>: Un marco de trabajo de código abierto que permite el desarrollo de aplicaciones móviles de alto rendimiento.</li>
+        <li><b>Angular</b>: Un marco de trabajo de JavaScript robusto y versátil para la construcción de aplicaciones web y móviles interactivas.</li>
+      </ul>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">Creado por Drago dev</ion-card-title>
+    </ion-card-header>
     <ion-card-content class="ion-text-center">
-      <h1>Desarrollado por:<br><b>Drago dev</b></h1>
+      <h2>Un desarrollador comprometido con la calidad y la innovación.</h2>
     </ion-card-content>
   </ion-card>
 </ion-content>
