--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,40 +1,92 @@
-<ion-header [translucent]="true"> 
-  <ion-toolbar>  
-    <ion-title>Contacto</ion-title> 
-  </ion-toolbar> 
+<ion-header [translucent]="true">
+  <ion-toolbar color="light">
+    <ion-title>Contacto</ion-title>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true"> 
-  <ion-grid> 
-    <ion-row class="ion-align-items-center ion-justify-content-center"> 
-      <ion-col size="12"> 
-        <ion-text class="ion-text-center"> 
-          <h1>Si quieres contactar conmigo, puedes usar cualquiera de las siguientes opciones: </h1>
-        </ion-text> 
-      </ion-col> 
-    </ion-row> 
-    <ion-row class="ion-align-items-center ion-justify-content-center"> 
-      <ion-col size="12"> 
-        <ion-list> 
-          <ion-item> 
-            <ion-icon name="mail" slot="start">
-
-            </ion-icon> 
-            <ion-label>osweldcontreras&#64;gmail.com</ion-label> 
-          </ion-item> 
-          <ion-item> 
-            <ion-icon name="logo-whatsapp" slot="start"></ion-icon> 
-            <ion-label><a href="https://wa.me/+584123172986" target="_blank">+584123172986</a></ion-label> 
-          </ion-item> <ion-item> 
-            <ion-icon name="logo-github" slot="start"></ion-icon> 
-            <ion-label><a href="https://github.com/Drago1204" target="_blank">Drago1204</a></ion-label> 
-          </ion-item> 
-          <ion-item> 
-            <ion-icon name="logo-instagram" slot="start"></ion-icon> 
-            <ion-label><a href="https://www.instagram.com/osweldc_12" target="_blank">osweldc_12</a></ion-label> 
-          </ion-item> 
-        </ion-list> 
-      </ion-col> 
-    </ion-row> 
-  </ion-grid> 
+<ion-content [fullscreen]="true">
+  <ion-grid>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-col size="12">
+        <ion-text class="ion-text-center">
+          <h1>
+            Si quieres contactar conmigo, puedes usar cualquiera de las
+            siguientes opciones:
+          </h1>
+        </ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-col size="12">
+        <ion-list lines="none">
+          <ion-item>
+            <ion-icon name="mail" slot="start" color="primary"></ion-icon>
+            <ion-label>osweldcontreras&#64;gmail.com</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon
+              name="logo-whatsapp"
+              slot="start"
+              color="primary"
+            ></ion-icon>
+            <ion-label
+              ><a href="https://wa.me/+584123172986" target="_blank"
+                >+584123172986</a
+              ></ion-label
+            >
+          </ion-item>
+          <ion-item>
+            <ion-icon
+              name="logo-github"
+              slot="start"
+              color="primary"
+            ></ion-icon>
+            <ion-label
+              ><a href="https://github.com/Drago1204" target="_blank"
+                >Drago1204</a
+              ></ion-label
+            >
+          </ion-item>
+          <ion-item>
+            <ion-icon
+              name="logo-instagram"
+              slot="start"
+              color="primary"
+            ></ion-icon>
+            <ion-label
+              ><a href="https://www.instagram.com/osweldc_12" target="_blank"
+                >osweldc_12</a
+              ></ion-label
+            >
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Formulario de contacto</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item>
+              <ion-label position="floating">Nombre</ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Correo electrónico</ion-label>
+              <ion-input type="email"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Mensaje</ion-label>
+              <ion-textarea></ion-textarea>
+            </ion-item>
+            <ion-button expand="full" type="submit" color="primary"
+              >Enviar</ion-button
+            >
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
